# s3p-node

./: .env.dev.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose-dev.yml  docker-compose-dev.yml.yml  docker-compose.yml  guidelines for Parser.md  guidelines for SPPfile (SPPL).md  guidelines for administrator.md  init.sh  main.py  pyproject.toml  requirements.txt  test_multiprocess.py
.github/workflows/: deploy.yml
Parser/: content_document.py  parse.py
Parser/source/: __init__.py  abc_source_documents.py  pci.py
configurations/envs/: .env.node.docker
configurations/logger/: dev.logger.conf  sample.logger.conf
db/: create table spp_document.sql  create table spp_source.sql  docker-compose.yml  function get all documents one source.sql  function safe get source.sql  function safe init document.sql
fileserver/: Dockerfile  docker-compose.yml  vsftpd.sh
scripts/db/: data.sql  plugin_config.sql  plugins.sql  spp_task_status.sql  startup.sql  startup_1.sql
scripts/ftpstorage/: test.py  vsftpd.conf
scripts/logger/: dev_logger.conf
scripts/make/: Makefile-temp
scripts/plugins/: spp_plugins.conf
src/exceptions/plugin/: __init__.py  plugin_error.py
src/sources_parser_platform/bus/: bus.py
src/sources_parser_platform/module/: spp_module.py
src/sources_parser_platform/modules/: __init__.py  filter_only_new_with_db.py  webdriver.py
src/sources_parser_platform/parser/: content_document.py  parse.py
src/sources_parser_platform/plugin/: plugin.py
src/sources_parser_platform/spp_language/: parser.py
src/sources_parser_platform/templates/: SPPfile  pci.py
src/sources_parser_platform/types/: __init__.py  spp_parser.py
src/sources_parser_platform/utils/: storage.py
src/spp/: __init__.py  app.py  dynamic_multiprocessor_task_pool.py  dynamic_task_tracking_system.py
src/spp/brokers/: __init__.py
src/spp/plugin/: __init__.py  abc_plugin.py  git_plugin.py  gitplugin.py  local_plugin.py  plugin.py  types.py  wrong_spp_language_parse.py
src/spp/repository/: abc_repository.py
src/spp/sppl/: sppfile.py
src/spp/task/: __init__.py  status.py  task.py
src/spp/types/: __init__.py  abc_plugin_parser.py  spp_document.py  spp_node.py  spp_plugin.py  spp_refer.py  spp_source.py  spp_task.py
src/spp/utils/: __init__.py  storage.py
src/task/: __init__.py  spp_task.py
src/task/bus/: __init__.py  bus.py
src/task/module/: __init__.py  (+1 more)
src/types/: __init__.py  abc_task_parser.py  spp_source.py  spp_task_configuration.py
(+132 files in other folders)
