[tool.poetry]
name = "nspk-di-parser"
version = "0.9.1"
description = ""
license = "Proprietary"
authors = ["Roman Lupashko <romal5754@gmail.com>"]
readme = "README.md"
packages = [{ include = "nspk_di_parser" }]

[tool.poetry.dependencies]
python = "3.11.5"
#numpy = "^1.25.5"
#pandas = "^1.3.1"
selenium = "^4.8.2"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.16" }
asyncpg = "^0.28.0"
alembic = "^1.11.1"
openpyxl = "^3.1.2"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
webdriver-manager = "^4.0.0"
python-magic-bin = { version = "^0.4.14", platform = "Windows_NT"}
python-docx = "^0.8.11"
pygithub = "^1.59.1"
matplotlib = "^3.8.0"
pandas = "^2.1.1"
pypdf = "^3.16.1"
python-magic = "^0.4.27"


[build-system]
requires = ["poetry-core", "setuptools<=65.5.1"]
build-backend = "poetry.core.masonry.api"
